# atlas-pharmatech

./: .env.example  .gitignore  ACCESS_URLS.md  ADMIN_DASHBOARD_NEXT_STEPS.md  AI_IMPORT_STATUS.md  ATLAS_PHARMA_TECHNICAL_OVERVIEW.md  Cargo.toml  Cargo.toml.metrics  ENCRYPTION_INTEGRATION_GUIDE.md  ENCRYPTION_VERIFICATION.md  ENTERPRISE_MARKETPLACE_FEATURES.md  ERP_FRONTEND_STATUS.md  ERP_INTEGRATION_TECHNICAL_PLAN.md  ERP_TESTING_GUIDE.md  FINAL_SECURITY_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LOG_SECURITY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPROVEMENTS.md  README.md  REGULATORY_AI_NEXT_STEPS.md  REGULATORY_FRONTEND_COMPLETE.md  REGULATORY_FRONTEND_PLAN.md  SECRET_ROTATION.md  SECURITY_AUDIT_COMPLETION.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION.md  SECURITY_STATUS.md  TESTING_QUICKSTART.md  TLS_SETUP.md  TODO_FEATURES.md  test_blacklist.sh  test_blacklist_cookies.sh  test_blacklist_full.sh  test_encrypted_upload.sh  test_pharma_data.csv
atlas-frontend/: README.md  next.config.js  package.json  start-dev.sh  tailwind.config.js
migrations/: 001_initial_schema.sql  002_openfda_catalog.sql  003_inquiry_messaging.sql  004_ai_import_system.sql  005_ai_assistant_features.sql  006_smart_alerts_system.sql  007_comprehensive_audit_system.sql  007_encrypt_pii_fields.sql  008_encrypted_only_columns.sql  008_production_mfa_totp.sql  009_regulatory_document_system.sql  010_erp_integration_system.sql  011_erp_ai_features.sql  012_admin_role_system.sql  013_add_webhook_security.sql  014_secure_mfa_trigger_bypass.sql  015_api_quota_system.sql  016_encryption_key_rotation.sql  017_ema_catalog.sql  018_openfda_sync_progress.sql  019_oauth_providers.sql
postman/: ERP_Integration.postman_collection.json
scripts/: test_erp.sh
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs  oauth.rs  tls.rs
src/handlers/: admin.rs  admin_security.rs  ai_import.rs  alerts.rs  auth.rs  ema.rs  erp_ai_integration.rs  erp_integration.rs  inquiry_assistant.rs  inquiry_messages.rs  inventory.rs  marketplace.rs  mfa.rs  mod.rs  nl_query.rs  oauth.rs  openfda.rs  pharmaceutical.rs  regulatory_documents.rs
src/middleware/: admin.rs  auth.rs  content_type_validation.rs  csrf_protection.rs  error_handling.rs  ip_rate_limiter.rs  metrics.rs  mod.rs  rate_limiter.rs  request_id.rs  security_headers.rs
src/models/: ai_import.rs  alerts.rs  ema.rs  inquiry_assistant.rs  inquiry_message.rs  inventory.rs  marketplace.rs  mod.rs  nl_query.rs  openfda.rs  pharmaceutical.rs  user.rs
src/repositories/: ema_repo.rs  inquiry_message_repo.rs  inventory_repo.rs  marketplace_repo.rs  mod.rs  openfda_repo.rs  pharma_repo.rs  user_repo.rs
src/services/: admin_service.rs  (+28 more)
tests/: erp_mock_server.rs
(+126 files in other folders)
